crates/toml_edit/tests/snapshots/invalid/string/no-open-05.stderr
TOML parse error at line 1, column 5
  |
1 | a = a"""
  |     ^^^^
string values must be quoted, expected literal string
